--- a/CookPal/app/src/main/res/layout/activity_edit_recipe.xml
+++ b/CookPal/app/src/main/res/layout/activity_edit_recipe.xml
@@ -110,10 +110,10 @@
         android:layout_gravity="left|top">
 
         <Button
-            android:id="@+id/confirm_create_recipe_button"
+            android:id="@+id/updateRecipeButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Confirm create recipe" />
+            android:text="Update recipe" />
 
 
     </LinearLayout>
