--- a/CookPal/app/src/main/res/layout/recipe_listview_entry.xml
+++ b/CookPal/app/src/main/res/layout/recipe_listview_entry.xml
@@ -4,54 +4,61 @@
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:padding="5dp">
 
-    <CheckBox
-        android:layout_width="35dp"
-        android:layout_height="50dp"
-        android:id="@+id/recipeListviewEntry"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:checked="false"
-        android:clickable="true"
-        android:enabled="true"
-        android:text=""
-        android:textSize="0sp"
-        android:textColor="@color/white"
-        android:background="@color/light_green"
-        android:layout_alignParentStart="true" />
-
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:text="Edit recipe"
-        android:src="@drawable/edit_icon"
-        android:id="@+id/editRecipeButton"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:background="@color/green"
-        android:layout_marginLeft="2dp"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:id="@+id/recipeTitle"
-        android:layout_toRightOf="@id/recipeListviewEntry"
-        android:layout_toLeftOf="@id/editRecipeButton"
-        android:layout_centerVertical="true"
-        android:gravity="center_vertical"
-        android:textColor="@color/white"
-        android:background="@color/green"
-        android:layout_marginLeft="2dp"
-        android:textSize="16dp"
-        android:padding="10dp"
-        android:scrollHorizontally="true"
-        android:ellipsize="end"
-        android:maxLines="1"/>
-
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
+        android:layout_width="fill_parent"
+        android:layout_height="180dp"
         android:id="@+id/recipeEntryImageView"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:scaleType="fitXY"
+        android:alpha=".7"
+    />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true">
+        <CheckBox
+            android:layout_width="35dp"
+            android:layout_height="50dp"
+            android:id="@+id/recipeListviewEntry"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:checked="false"
+            android:clickable="true"
+            android:enabled="true"
+            android:text=""
+            android:textSize="0sp"
+            android:textColor="@color/white"
+            android:background="@color/light_green"
+            android:layout_alignParentStart="true" />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:text="Edit recipe"
+            android:src="@drawable/edit_icon"
+            android:id="@+id/editRecipeButton"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:background="@color/green"
+            android:layout_marginLeft="2dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:id="@+id/recipeTitle"
+            android:layout_toRightOf="@id/recipeListviewEntry"
+            android:layout_toLeftOf="@id/editRecipeButton"
+            android:layout_centerVertical="true"
+            android:gravity="center_vertical"
+            android:textColor="@color/white"
+            android:background="@color/green"
+            android:layout_marginLeft="2dp"
+            android:textSize="16dp"
+            android:padding="10dp"
+            android:scrollHorizontally="true"
+            android:ellipsize="end"
+            android:maxLines="1"/>
+    </RelativeLayout>
 
 </RelativeLayout>
