--- a/CookPal/app/src/main/res/layout/assistant_steplist_listviewitem.xml
+++ b/CookPal/app/src/main/res/layout/assistant_steplist_listviewitem.xml
@@ -9,7 +9,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:textColor="@color/white"
-        android:background="@color/orange"
+        android:background="@color/grey"
         android:text="@string/dummyStepNum"
         android:padding="10dp"/>
     <TextView
@@ -19,7 +19,7 @@
         android:minHeight="40dp"
         android:layout_toRightOf="@id/stepListItem_stepNum"
         android:textColor="@color/white"
-        android:background="@color/light_orange"
+        android:background="@color/light_grey"
         android:padding="10dp"
         android:text="@string/dummyStepTitle"/>
     <TextView
@@ -27,7 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="14dp"
         android:layout_below="@id/stepListItem_stepTitle"
-        android:textColor="@color/light_orange"
+        android:textColor="@color/grey"
         android:textSize="12dp"
         android:text="@string/dummyTimeLeft"/>
 </RelativeLayout>
