removing ingredients/instructions in add recipe works, but need to figure the step numbers

--- a/CookPal/app/src/main/res/layout/add_recipe_ingredients_entry.xml
+++ b/CookPal/app/src/main/res/layout/add_recipe_ingredients_entry.xml
@@ -55,6 +55,7 @@
         android:layout_gravity="center_vertical"
         android:background="@android:color/transparent"
         android:scaleType="fitXY"
+        android:clickable="true"
         />
 
 </LinearLayout>
