--- a/CookPal/app/src/main/res/layout/directions_tab.xml
+++ b/CookPal/app/src/main/res/layout/directions_tab.xml
@@ -1,18 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ListView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/directions_tab_listview">
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:id="@+id/directionLinearLayout"
-        android:paddingLeft="30dp"
-        android:paddingRight="20dp">
 
-    </LinearLayout>
 
-</ScrollView>
+</ListView>
